--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
     --text-color: white;
-    --bg-url: url(style/bg-mobile.jpg);
+    --bg-url: url(style/bg-desktop.png);
     --stroke-color: rgba(255, 255, 255, 0.50);
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -40,16 +40,18 @@ body {
 #conteiner {
     width: 360px;
     margin: auto; /*margin-left: auto; & margin-right: auto;*/
-    margin-top: 56px;
+    margin-top: 10px;
     padding: 0 24px;
 }
 
 #profile {
     text-align: center;
     padding: 24px;
+    padding-bottom: 0px;
 }
 
 #profile img {
+    border-radius: 100%;
     width: 112px;
     display: inline;
     margin: auto;
@@ -109,6 +111,7 @@ ul {
 }
 
 ul li a{
+    text-align: center;
     display: flex;
     justify-content: center;
     padding: 16px 24px;
@@ -129,6 +132,14 @@ ul li a:hover {
     background: var(--surface-color-hover);
     border: 1.5px solid var(--text-color);
 
+}
+
+ul li a s {
+    color: #ff0000;
+}
+
+ul li a span {
+    color: #00ff00;
 }
 /* Links sociais*/
 
