Responsividade do background

--- a/style.css
+++ b/style.css
@@ -6,22 +6,13 @@
 
 :root {
     --text-color: white;
-    --bg-url: url(style/bg-desktop.png);
+    --bg-url: url(style/bg-mobile.png);
     --stroke-color: rgba(255, 255, 255, 0.50);
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(255, 255, 255, 0.20);
     --swith-bg-url: url(style/moon-stars.svg);
-}
 
-.light {
-    --text-color: black;
-    --bg-url: url(style/bg-mobile-light.jpg);
-    --stroke-color: rgba(0, 0, 0, 0.50);
-    --surface-color: rgba(0, 0, 0, 0.05);
-    --surface-color-hover: rgba(0, 0, 0, 0.02);
-    --highlight-color: rgba(0, 0, 0, 0.20);
-    --swith-bg-url: url(style/sun.svg);
 }
 
 body * {
@@ -141,6 +132,7 @@ ul li a s {
 ul li a span {
     color: #00ff00;
 }
+
 /* Links sociais*/
 
 #social_links {
@@ -175,4 +167,11 @@ footer {
 
 footer underline {
     text-decoration: underline;
+}
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(style/bg-desktop.png);
+    }
+
 }
